[gd_scene load_steps=3 format=3 uid="uid://ch5ft504adcxv"]

[ext_resource type="Script" uid="uid://cwjneodgoqiti" path="res://tscns/人员战斗信息组件.gd" id="1_2x3k4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frd7m"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.34407574, 0.34407577, 0.3440756, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="人员战斗信息组件" type="PanelContainer"]
custom_minimum_size = Vector2(300, 100)
offset_right = 300.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_frd7m")
script = ExtResource("1_2x3k4")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "名称: 未设置"
vertical_alignment = 1

[node name="HPContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="MainContainer/HPContainer"]
layout_mode = 2
text = "生命值:"
vertical_alignment = 1

[node name="HPProgressBar" type="ProgressBar" parent="MainContainer/HPContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0
show_percentage = false
